--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -8,6 +8,26 @@
         <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css}">
     </head>
     <body>
+        <!-- MODAL -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Exclusão</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        Esta ação não poderá ser desfeita, deseja realmente <strong>excluir</strong> este colaborador ?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-outline-danger">Excluir</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <main>
             <div class="container">
                 <div th:replace="fragments/fragment :: cabecalho"></div>
@@ -58,7 +78,7 @@
                             <td>
                                 <a th:href="@{alterar/{id}(id=${pessoa.id})}" style="color: goldenrod;"><i class="bi bi-pencil-square"></i></a>
                                 &nbsp;&nbsp;&nbsp;&nbsp;
-                                <a th:href="@{excluir/{id}(id=${pessoa.id})}" style="color: tomato;"><i class="bi bi-trash-fill"></i></a>
+                                <a th:href="@{excluir/{id}(id=${pessoa.id})}" style="color: tomato;" type="button" data-toggle="modal" data-target="#exampleModal"><i class="bi bi-trash-fill"></i></a>
                             </td>
                         </tr>
                     </tbody>
