--- a/src/main/resources/templates/lista.html
+++ b/src/main/resources/templates/lista.html
@@ -8,29 +8,10 @@
         <link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css}">
     </head>
     <body>
-        <!-- MODAL -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Exclusão</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        Esta ação não poderá ser desfeita, deseja realmente <strong>excluir</strong> este colaborador ?
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Cancelar</button>
-                        <button type="button" class="btn btn-outline-danger">Excluir</button>
-                    </div>
-                </div>
-            </div>
-        </div>
         <main>
+            <div th:replace="fragments/fragment :: cabecalho"></div>
+            <br><br>
             <div class="container">
-                <div th:replace="fragments/fragment :: cabecalho"></div>
                 <h4>Filtro</h4>
                 <table class="table table-hover table-dark" style="box-shadow: 5px 5px 5px black">
                     <div class="input-group mb-3">
@@ -78,7 +59,7 @@
                             <td>
                                 <a th:href="@{alterar/{id}(id=${pessoa.id})}" style="color: goldenrod;"><i class="bi bi-pencil-square"></i></a>
                                 &nbsp;&nbsp;&nbsp;&nbsp;
-                                <a th:href="@{excluir/{id}(id=${pessoa.id})}" style="color: tomato;" type="button" data-toggle="modal" data-target="#exampleModal"><i class="bi bi-trash-fill"></i></a>
+                                <a th:href="@{excluir/{id}(id=${pessoa.id})}" onclick="return confirm('Esta ação não poderá ser desfeita, deseja realmente excluir este colaborador ?');" style="color: tomato;"><i class="bi bi-trash-fill"></i></a>
                             </td>
                         </tr>
                     </tbody>
