--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
             <br><br>
             <div class="jumbotron container">
                 <h1 class="display-4">Desafio Unidac</h1>
-                <p class="lead">Aplicação desenvolvida pelo candidato <strong>Miguel Castro</strong> seguindo os requisítos da <a href="https://github.com/unidac-grupo-wl/desafio-unidac-grupo-wl" target="blank">proposta.</a></p>
+                <p class="lead">Aplicação desenvolvida pelo candidato <strong>Miguel Castro</strong> seguindo os requisitos da <a href="https://github.com/unidac-grupo-wl/desafio-unidac-grupo-wl" target="blank">proposta.</a></p>
                 <hr class="my-4">
                 <a th:href="@{/listar}" class="btn btn-outline-success" href="#" role="button">Ver aplicação</a>
                 <br><br>
